Fix : vente + DashboardController + MedicamentController plein écran + java version and Warnings